exports[`Icon should render fontawesome 1`] = `
<i
  aria-hidden="true"
  className="fa fa-bars"
  title={null} />
`;

exports[`Icon should render from custom font 1`] = `
<i
  aria-hidden="true"
  className="icon-test"
  title={null} />
`;

exports[`Icon should render from svg 1`] = `
<svg
  aria-hidden="true"
  className="tc-svg-icon"
  title={null}>
  <use
    xlinkHref="#svg-dd" />
</svg>
`;
